fixed categories check all alignment

--- a/app/view/reporting/Selector.scss
+++ b/app/view/reporting/Selector.scss
@@ -90,8 +90,6 @@
     $background-color: map-get($reporting-colors, 'row-dark'),
     $background-gradient: none,
     $line-height: 22pt,
-    $padding: 0 14pt 0 14pt,
-
 );
 
 
